Add activity streams (#1791)
* Adds activity stream

* Updates django haystack

* Adds action creation

* Adds notification list view

* Adds notification preference object

* Fix alignment

* Adds notification icon

* Move notification preferences to profile

* Move has_unread_notifications to property

* Update last viewed on get

* Fix tests

* Add ACTSTREAM_ENABLE feature flag

* Reduce queries with actstream disabled

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,7 @@ prometheus_client = "*"
 humanize = "*"
 disposable-email-domains = "*"
 django-machina = "*"
-django-haystack = "3.0b1"
+django-haystack = "*"
 citeproc-py = "*"
 django-ipware = "*"
 pyswot = "*"
@@ -89,6 +89,7 @@ django_rest_knox = "^4.1.0"
 numpy = "*"
 Pillow = "*"
 panimg = "^0.1.0"
+django-activity-stream = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest-django = "*"
