Adds workspace keys and admin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,6 +149,7 @@ services:
       <<: *private_storage_credentials
       <<: *protected_storage_credentials
       PYTHONDONTWRITEBYTECODE: 1
+      WORKSPACES_SECRET_KEY: "${WORKSPACES_SECRET_KEY-}"
     restart: always
     command: "celery -A config worker -l info -c 1"
     scale: 1
