--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,6 @@ dist/
 # Processor container images
 app/algorithm.tar.gz
 app/tests/resources/gc_demo_algorithm/algorithm_io.tar
+
+# Users environment file
+.env
